--- a/Nodes/node-red-contrib-my-device/package.json
+++ b/Nodes/node-red-contrib-my-device/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
   "node-red": {
         "nodes": {
             "Create Device": "nodes/create-device.js"
